fix: resolve layout misalignment in HeaderComponent caused by padding and justify-content

--- a/src/app/main-page/hero/hero.component.scss
+++ b/src/app/main-page/hero/hero.component.scss
@@ -138,7 +138,7 @@ a {
     }
 
     #cogwheel-container {
-      left: 4rem;
+      left: 2.5rem;
     }
 
     #hero-pic {
@@ -156,8 +156,8 @@ a {
 
 @media (max-width: 720px) {
   section {
-    padding-left: 2rem;
-    padding-right: 2rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
 
   #headline {
