--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -16,6 +16,9 @@ header {
 
       @include dFlex($g: 0.5rem);
     }
+    div:nth-child(3) {
+      justify-content: flex-end;
+    }
   }
 }
 
@@ -26,14 +29,12 @@ a {
 }
 
 #fs-logo {
-
   &:hover {
     cursor: pointer;
   }
 
   &:hover .fuchs-font {
-      color: $main-coral;
-
+    color: $main-coral;
   }
 }
 
@@ -83,4 +84,8 @@ a {
     fill: $main-ivory;
     transition: fill 125ms ease;
   }
+}
+
+#app-social-links {
+  width: 140px;
 }
